--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -7,7 +7,7 @@ cloudbees-slack-integration:
       jenkins: "antonio-chang"
       optedIn: true
       scmId: "antonio-chang"
-      slack: "REPLACE_USER_EMAIL"
+      slack: "schang@marqeta.com"
       slackWorkspace: "T010A455W77"
 cloudbees-pipeline-policies:
   config:
